<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Change_Password">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reset_Pass"
        android:textSize="32sp"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="55dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reg_email"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="140dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OTP"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="190dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="122dp" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="73dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="numberPassword"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="179dp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="163dp"
        android:layout_height="40dp"
        android:text="@string/Send_OTP"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="179dp" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reset"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="245dp" />
</androidx.constraintlayout.widget.ConstraintLayout>