<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/Reg_Header"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="67dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reg_user"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="207dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reg_email"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="156dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reg_pass"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="253dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Re_Reg_pass"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="300dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="127dp" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="231dp" />

    <EditText
        android:id="@+id/editTextTextPassword5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="300dp" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="181dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reg_Header"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="411dp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        tools:layout_editor_absoluteX="250dp"
        tools:layout_editor_absoluteY="411dp" />

</androidx.constraintlayout.widget.ConstraintLayout>