<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Change_Pass2">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Change_Pass"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reg_pass"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="112dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Re_Reg_pass"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="176dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="91dp" />

    <EditText
        android:id="@+id/editTextTextPassword6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="176dp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reset"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="244dp" />
</androidx.constraintlayout.widget.ConstraintLayout>