<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bg_pink"
    tools:context=".Rider">

    <View
        android:id="@+id/view5"
        android:layout_width="420dp"
        android:layout_height="5dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="634dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="99dp"
        android:layout_height="5dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="681dp"
        android:background="#000000"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view3"
        android:layout_width="99dp"
        android:layout_height="5dp"
        android:layout_marginStart="266dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="681dp"
        android:background="#000000"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="99dp"
        android:layout_height="5dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="681dp"
        android:background="#000000"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:background="@color/Choose_Red"
        android:layout_width="105dp"
        android:layout_height="92dp"
        android:layout_marginEnd="306dp"
        android:layout_marginBottom="639dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/motor_white" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="98dp"
        android:layout_height="167dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="208dp"
        android:layout_marginBottom="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/store" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="128dp"
        android:layout_height="231dp"
        android:layout_marginStart="196dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="569dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/person" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="78dp"
        android:layout_height="146dp"
        android:layout_marginStart="325dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="612dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cog" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="132dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="138dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Surname"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="179dp" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="297dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Vehicle_Color"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="312dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Vehicle_Plate"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="356dp" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Menu"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="481dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Payment_met"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="583dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Price"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="583dp" />

</androidx.constraintlayout.widget.ConstraintLayout>